# KafkaMinimal

./: Cargo.toml  Dockerfile  README.md
src/: kafka_client.rs  kafka_config.rs  main.rs
