[package]
name = "KafkaMinimal"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { package = "madsim-rdkafka", version = "0.4.1", features = [
    "cmake-build",
] }
tokio-stream = { git = "https://github.com/madsim-rs/tokio.git", rev = "0dd1055", features = ["net", "fs"] }
tokio-util = "0.7"
serde = { version = "1", features = ["derive", "rc"] }
serde_derive = "1"
serde_json = "1"
serde_with = { version = "3", features = ["json"] }
duration-str = "0.11.2"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
tokio = { version = "0.2", package = "madsim-tokio", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
] }
futures-util = "0.3.30"
futures-async-stream = "0.2"
futures = "0.3"
